[gd_scene load_steps=3 format=3 uid="uid://deiekgp81lnds"]

[ext_resource type="Script" path="res://scenes/menus/level_select.gd" id="1_togby"]
[ext_resource type="Texture2D" uid="uid://bryxk6cyeclsh" path="res://assets/placeholder_chs.jpg" id="2_kx2ch"]

[node name="LevelSelect" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_togby")

[node name="bg" type="TextureRect" parent="."]
layout_mode = 1
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("2_kx2ch")
expand_mode = 5

[node name="ButtonsGrid" type="GridContainer" parent="."]
custom_minimum_size = Vector2(150, 90)
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -468.0
offset_top = 153.0
offset_right = 526.0
offset_bottom = 650.0
grow_horizontal = 2

[node name="TestLevelButton" type="Button" parent="ButtonsGrid"]
custom_minimum_size = Vector2(80, 80)
layout_mode = 2
theme_override_font_sizes/font_size = 24
text = "test
level"

[node name="Title" type="Label" parent="."]
layout_mode = 0
offset_left = 179.0
offset_top = 51.0
offset_right = 513.0
offset_bottom = 134.0
theme_override_font_sizes/font_size = 60
text = "level select"

[node name="BackButton" type="Button" parent="."]
layout_mode = 0
offset_left = 578.0
offset_top = 629.0
offset_right = 658.0
offset_bottom = 682.0
theme_override_font_sizes/font_size = 24
text = "back"
